# kanji-grader

./: README.md  pyproject.toml
src/kanji_grader/: grader.py  levels.py
tests/: rashoumon.txt  test_task1.py  test_task2.py
