[tool.poetry]
name = "kanji-grader"
version = "0.1.0"
description = "A program which rates how much kanji is needed to read a piece of text"
authors = [
  "Collective of programmers"
]
packages = [{include = "src/kanji_grader"}]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
